test/corpus/smoke.txt
==================
ridl surface
==================

webrpc = v1
name = demo
version = v0.1.0

enum Role: uint32
  - USER
  - ADMIN

struct User
  - id: uint64
    + json = id

error 404 NotFound "not found" HTTP 404

service Example
  @ public
  @ scope : api read write
  - Ping()
  - Echo(msg: string) => (out: string)
  - Events() => stream (item: string)

---

(source_file
  (meta_declaration
    key: (identifier)
    value: (meta_value
      (meta_word)))
  (meta_declaration
    key: (identifier)
    value: (meta_value
      (meta_word)))
  (meta_declaration
    key: (identifier)
    value: (meta_value
      (dotted_meta_literal)))
  (enum_declaration
    name: (identifier)
    underlying_type: (identifier)
    (enum_variant
      name: (identifier))
    (enum_variant
      name: (identifier)))
  (struct_declaration
    name: (identifier)
    (struct_field
      name: (identifier)
      type: (identifier)
      (field_meta
        key: (meta_path
          (identifier))
        value: (meta_value
          (meta_word)))))
  (error_declaration
    code: (number)
    name: (identifier)
    message: (error_message
      (string))
    http_status: (number))
  (service_declaration
    name: (identifier)
    (annotation_line
      (annotation_clause
        tag: (identifier)))
    (annotation_line
      (annotation_clause
        name: (annotation_word_list
          (identifier))
        value: (annotation_value
          (annotation_value_words
            (identifier)
            (identifier)
            (identifier)))))
    (service_method
      name: (method_name
        (identifier))
      parameters: (parameter_list))
    (service_method
      name: (method_name
        (identifier))
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      returns: (method_returns
        (tuple_type
          (tuple_field
            name: (identifier)
            type: (identifier)))))
    (service_method
      name: (method_name
        (identifier))
      parameters: (parameter_list)
      returns: (method_returns
        stream_payload: (tuple_type
          (tuple_field
            name: (identifier)
            type: (identifier)))))))
